# demo-avs-bls-blueprint

./: .gitignore  CMD.md  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml  settings.env
contracts/src/: ITangleTaskManager.sol  TangleServiceManager.sol  TangleTaskManager.sol
data/private/auth-proxy/db/: .paseto_key  .tls_envelope_key  IDENTITY  LOG  LOG.old.1759998583463719  LOG.old.1759999767984332  LOG.old.1759999894861014  LOG.old.1760000011922447  LOG.old.1760000877748788  LOG.old.1760000928525528  LOG.old.1760001055156092  LOG.old.1760001273862092  LOG.old.1760001349606806  LOG.old.1760001677056812  LOG.old.1760001742649328  LOG.old.1760089987358626  LOG.old.1760090095473116  LOG.old.1760091839404121  MANIFEST-000085  OPTIONS-000083
src/: error.rs  errors.rs  lib.rs  main.rs
src/contexts/: aggregator.rs  client.rs  combined.rs  eigen_task.rs
src/jobs/: example_task.rs  initialize_task.rs  mod.rs
