[package]
name = "test_eigen_bls_blueprint"
version = "0.1.0"
edition = "2021"
description = "temo"
authors = ["Daniel Bui <79790753+danielbui12@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
homepage = "demo"
repository = "https://github.com/danielbui12/test_eigen_bls_blueprint"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]
rust-version = "1.88"

[dependencies]
blueprint-sdk = { version = "0.1.0-alpha.19", default-features = false, features = ["std", "eigenlayer", "evm", "macros", "build", "testing"], git = "https://github.com/tangle-network/blueprint.git", rev = "235c8c4197a4e511aeab9e3ef36ef3fa1a3b1d4c" }
serde = { version = "1.0.208", features = ["derive"] }
jsonrpc-core = { version = "18.0.0", default-features = false }
jsonrpc-http-server = { version = "18.0.0", default-features = false }
thiserror = "1.0"
reqwest = "0.12"
color-eyre = { version = "0.6", default-features = false }

[build-dependencies]
blueprint-sdk = { version = "0.1.0-alpha.19", default-features = false, features = ["std", "eigenlayer", "evm", "macros", "build"], git = "https://github.com/tangle-network/blueprint.git", rev = "235c8c4197a4e511aeab9e3ef36ef3fa1a3b1d4c" }

[features]
default = ["std"]
std = ["blueprint-sdk/std"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "test_eigen_bls_blueprint"
path = "src/main.rs"

[package.metadata.blueprint]
manager = { Evm = "TangleTaskManager" }

[[package.metadata.gadget.Native.sources]]
owner = "danielbui12"
repo = "test_eigen_bls_blueprint"
tag = "0.1.0"
binaries = [
    { arch = "Amd64", os = "Linux", name = "amd64-linux-test_eigen_bls_blueprint-gadget" },
    { arch = "Arm64", os = "Linux", name = "arm64-linux-test_eigen_bls_blueprint-gadget" },
]
